css/layout.css
/* ... */
/* section started mobile */
@media (max-width: 720px) {
	.section.started {
		padding: 0 30px;
	}


	.section.started.layout-creative,
	.section.started.layout-post-creative {
		padding-top: 50vw;
		padding-left: 30px;
		padding-right: 30px;
		padding-bottom: 30px;
	}

	.section.started .started-content .main-title {
		margin-left: 0;
		top: 65%;
	}

	.section.started .started-content .main-title h1 {
		font-size: 30px;
	}

	.section.started .started-content .main-title h2 {
		font-size: 17px;
	}



	.section.started .started-content .h-title {
		left: 0;
		bottom: 30px;
		padding-right: 50px;
		font-size: 17px;
	}


	.section.started .started-content .h-subtitle,
	.section.started .started-content .typed-subtitle,
	.section.started .started-content .typed-bread {
		margin-top: -20px;
		font-size: 30px;
		line-height: 40px;
	}

	.section.started .started-content .typed-subtitle {
		margin-top: 0;
		left: 0;
	}


	.section.started.section-title .started-content .h-title {
		font-size: 10vw;
		line-height: 10vw;
	}


	.section.started.section-title .started-content .typed-bread,
	.section.started.layout-creative .started-content .typed-bread,
	.background-enabled .section.started.section-title .started-content .typed-bread,
	.background-enabled .section.started.layout-creative .started-content .typed-bread {
		font-size: 14px;
	}


	.section.started.layout-creative .started-content .h-title,
	.section.started.layout-post-creative .started-content .h-title {
		font-size: 23px;
	}


	.section.started .started-content .logo {
		position: absolute;
		top: 0;
		left: -30px;
		width: 110vw;
		height: 62vh;
		-webkit-clip-path: polygon(25% 0, 100% 25%, 80% 100%, 0 85%);
		clip-path: polygon(25% 0, 100% 25%, 80% 100%, 0 85%);
	}


	.section.started.personal .started-content .h-title {
		left: 0;
		top: 64vh;
		bottom: auto;
		width: 100%;
		margin-top: 0;
		margin-left: 0;
	}


	.section.started.personal .started-content .typed-subtitle,
	.section.started.personal .started-content .typed-bread {
		left: 0;
		bottom: 30px;
		padding-right: 50px;
		font-size: 20px;
		line-height: 30px;
	}


	.section.started .swiper-nav {
		left: 30px;
	}


	.section.started .mouse_btn {
		right: 50%;
		margin-left: 0;
		margin-right: -10px;
		bottom: 150px;
	}


	.section.started.section-title .started-content .h-subtitle,
	.section.started.section-title .started-content .typed-subtitle,
	.section.started.section-title .started-content .typed-bread {
		left: 0;
	}


	.section.started + .section, .section.started.layout-creative + .section {
		margin-top: 0;
	}

}

/* section started mobile */
@media (max-width: 340px) {
	.section.started .swiper-nav {
		bottom: 145px;
	}

}

/* section started mobile landscape */
@media screen and (orientation: landscape) and (min-device-width: 319px) and (max-device-width: 1199px) {
	.section.started .started-content .logo {
		position: absolute;
		left: -30px;
		right: -30px;
		top: 0;
		width: auto;
		height: 100%;
		-webkit-clip-path: none;
		clip-path: none;
	}

	.section.started .started-content .main-title {
		margin-left: 20;
		top: 65%;
	}

	.section.started .started-content .main-title h1 {
		font-size: 30px;
	}

	.section.started .started-content .main-title h2 {
		font-size: 17px;
	}


	.section.started.personal .started-content .h-title {
		top: auto;
		left: 50px;
		bottom: 50px;
		width: auto;
		margin-left: 0;
		margin-top: 0;
		margin-right: 50px;
	}


	.section.started.personal .started-content .typed-subtitle,
	.section.started.personal .started-content .typed-bread {
		display: none;
	}


	.section.started .swiper-nav {
		bottom: 120px;
	}

}

@media screen and (orientation: landscape) and (min-device-width: 319px) and (max-device-width: 670px) {
	.section.started.personal .started-content .h-title {
		left: 0;
		bottom: 30px;
		margin-right: 30px;
	}


	.section.started .swiper-nav {
		bottom: 100px;
	}

}

/* - About */
.section.about .image {
	float: left;
	width: 160px;
	font-size: 0;
}

.section.about .image img {
	width: 100%;
	height: auto;
}

/* .section.about .desc {
	margin-left: 195px;
} */

.section.about .desc p {
	word-break: break-word;
}

.section.about .desc p:first-child {
	margin-top: 0;
}


.info-list {
	margin-bottom: 20px;
}

.info-list ul {
	list-style: none;
	margin: 0;
	padding: 0;
}

.info-list ul li {
	display: inline-block;
	vertical-align: top;
	width: 48%;
	margin: 0 0 6px 0;
}

.info-list ul li strong {
	font-weight: 400;
	color: #4bffa5;
}


/* section about fullhd */
@media (min-width: 1700px) {
	.info-list ul li {
		width: 32%;
	}

}

/* section about tablet */
@media (max-width: 1199px) {
	.section.about .image {
		width: 120px;
		margin-right: 0;
		margin-bottom: 25px;
	}


	/* .section.about .desc {
		margin-left: 145px;
	} */

}

/* section about mobile */
@media (max-width: 720px) {
	.section.about .image {
		margin: 0 auto 20px auto;
		float: none;
		width: 100px;
		text-align: center;
	}


	.section.about .desc {
		/* margin-left: 0; */
		text-align: center;
	}


	.info-list ul li {
		width: 100%;
	}

}

/* - Resume */
.section .col:nth-child(odd) {
	padding-right: 35px;
}

.section .col:nth-child(even) {
	padding-left: 35px;
}

.section .col:nth-child(even) .content-box {
	margin-right: -1px;
}


.resume-items .resume-item {
	position: relative;
	margin: 70px 0 0 0;
}

.resume-items .resume-item:first-child {
	margin: 0;
}

.resume-items .resume-item .date {
	position: relative;
	margin: 0 0 5px 0;
	display: inline-block;
	font-size: 12px;
	color: #999;
}

.resume-items .resume-item .name {
	margin: 0 0 15px 0;
	color: #eee;
	font-weight: 500;
}

.resume-items .resume-item.active .date {
	color: #4bffa5;
	font-weight: 600;
}


/* section resume tablet */
@media (max-width: 1199px) {
	.section .col:nth-child(odd) {
		padding-right: 20px;
	}


	.section .col:nth-child(even) {
		padding-left: 20px;
	}


	.resume-items .resume-item {
		margin: 40px 0 0 0;
	}

}
/* ... */

